# naturindeks

./: 240176 - Naturindeks_2025.Rproj  ProjectNaturindeks.py  README.md  pyproject.toml
analyser/: NICalc_upload.r  analyses_neqr.Rmd  analyses_neqr.r  blotbunn_hav.Rmd  blotbunn_hav.html  convert2neqr.r  trainBrt_AdamLillith.R
analyser/Summaries/: Chla.html  H.html  MSMDI.html  NQI1.html  PTI.html  RSLA.html  blaaskjell.html
naturindeks/: main.py
rscript/: rscript.R
rscripts/Summaries/: AIP.html  PIT.html  PTI.html  TIc.html
