[tool.poetry]
name = "naturindeks"
version = "0.1.0"
description = "Tools that are needed for collecting and calculating naturindeks data"
authors = ["Roar Brænden <roar.branden@niva.no>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aquamonitor = "0.3.4"
requests = "^2.24"
pandas = "^2.2"
openpyxl = "^3.1"

[tool.poetry.scripts]
download-niva-pti = "naturindeks.main:downloadNIVA_PTI"
download-niva-begroing = "naturindeks.main:downloadNIVA_Begroing"
download-niva-aspt = "naturindeks.main:downloadNIVA_ASPT"
download-niva-blotbunn = "naturindeks.main:downloadNIVA_Blotbunn"
download-niva-hardbunn = "naturindeks.main:downloadNIVA_Hardbunn"
download-niva-marin = "naturindeks.main:downloadNIVA_MarinChla"
rewrite-niva-pti = "naturindeks.main:rewriteNIVA_PTI"
rewrite-niva-begroing = "naturindeks.main:rewriteNIVA_Begroing"
rewrite-niva-blotbunn = "naturindeks.main:rewriteNIVA_Blotbunn"
rewrite-niva-hardbunn = "naturindeks.main:rewriteNIVA_Hardbunn"
rewrite-niva-aspt = "naturindeks.main:rewriteNIVA_ASPT"
rewrite-niva-marin = "naturindeks.main:rewriteNIVA_MarinPlankton"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
